Cloud Run and Vercel deployment config (#49)
## Summary
- Dockerfile and .dockerignore for containerizing the Spring Boot
backend for Cloud Run
- `server.port` reads `PORT` env var (required by Cloud Run)
- CORS `allowedOrigins` configurable via `ALLOWED_ORIGINS` env var
(comma-separated) so Vercel frontend URL can be added without a code
change

Co-authored-by: Ryan Palmer <ryanpalmercs@github.com>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>